--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@
         root.appendChild(heading);
     </script> -->
 
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-
     <!-- <script>
         const heading = React.createElement("h1", {} , "Hi we are using react");
         const root = ReactDOM.createRoot(document.getElementById('root'));
@@ -26,7 +23,7 @@
 
     </script>  -->
 
-    <script src="./App.js"> </script>
+    <script type="module" src="./App.js"> </script>
 
 
 </body>
